--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/overview.mdx
@@ -28,7 +28,7 @@ class MyAgent(OptimizableAgent):
 - `invoke` receives the message list produced by the optimizer and must return the agent output string.
 - Use `init_agent`/`init_llm` helpers from the base class if you need the built-in LiteLLM wiring.
 
-See `sdks/opik_optimizer/scripts/llm_frameworks/` for working agents (LangGraph, etc.). Each script doubles as both an example and a regression test during development.
+See `sdks/opik_optimizer/scripts/llm_frameworks/` for working agents (LangGraph, MCP tool runners, etc.). Each script doubles as both an example and a regression test during development.
 
 ## How agent optimization works
 
