--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/overview.mdx
@@ -7,7 +7,7 @@ The Opik Optimizer SDK wraps a mix of in-house algorithms (MetaPrompt, Hierarchi
 
 ## How optimizers run
 
-1. **Input** – you pass a `ChatPrompt` definition, dataset, and metric. Many optimizers also accept additional parameters to set which model to use, number of optimization rounds, and even tool use definitions.
+1. **Input** – you pass a `ChatPrompt` definition, dataset, and metric. Many optimizers also accept additional parameters to set which model to use, number of optimization rounds, and even tool use (MCP and function calling) definitions.
 2. **Candidate generation** – each algorithm proposes new prompts (MetaPrompt via reasoning LLMs, Evolutionary via mutation/crossover, GEPA via its genetic-Pareto search).
 3. **Evaluation** – Opik runs the candidate against your dataset/metric and logs trials to the dashboard. The steps 2-to-3 continue to loop until such time a best prompt is found or the search has been exhausted.
 4. **Result delivery** – every optimizer returns an `OptimizationResult` with the best prompt, history, scores, and metadata which is passed back and also available in the UI.
@@ -16,7 +16,7 @@ The Opik Optimizer SDK wraps a mix of in-house algorithms (MetaPrompt, Hierarchi
 
 | Optimizer | Origin | Best for | Key inputs | Notes |
 | --- | --- | --- | --- | --- |
-| [MetaPrompt](/agent_optimization/algorithms/metaprompt_optimizer) | Opik | General prompt refinement | Prompt + dataset + metric | Reasoning LLM critiques and rewrites prompts and tool schemas. |
+| [MetaPrompt](/agent_optimization/algorithms/metaprompt_optimizer) | Opik | General prompt refinement | Prompt + dataset + metric | Reasoning LLM critiques and rewrites prompts, supports MCP workflows and tool schemas. |
 | [Hierarchical Reflective](/agent_optimization/algorithms/hierarchical_reflective_optimizer) | Opik | Root-cause analysis on complex prompts | Metrics with detailed reasons | Batches failures, synthesizes themes, proposes targeted fixes. |
 | [Few-Shot Bayesian](/agent_optimization/algorithms/fewshot_bayesian_optimizer) | Opik | Optimizing few-shot example sets | Dataset with demonstrations | Uses Optuna to pick count/order of examples for chat prompts. |
 | [Evolutionary](/agent_optimization/algorithms/evolutionary_optimizer) | Opik + DEAP | Exploring diverse prompt structures | Mutation/crossover params | Multi-objective optimization (score vs. length) and LLM-driven operators. |
