[NA] [P SDK] Replace generic `object_type` annotation with `Literal` for span/trace handling
- Updated `encode_and_anonymize` and `anonymize_encoded_obj` to use `Literal["span", "trace"]` for stricter typing of `object_type`.
- Refactored method calls to replace dynamic `object_type` with explicit string literals ("span" or "trace").
- Adjusted documentation and corresponding tests to align with the updated `object_type` usage.
- Improved code clarity and type safety by removing reliance on `Any` or type inference.

--- a/apps/opik-documentation/documentation/fern/docs/production/anonymizers.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/production/anonymizers.mdx
@@ -122,7 +122,7 @@ def anonymize(self, data, **kwargs):
 The `anonymize()` method also receives additional context through `**kwargs`:
 
 - **`field_name`**: Indicates which field is being anonymized (`"input"`, `"output"`, `"metadata"`, or nested field names in dots notation such as `"metadata.email"`)
-- **`object_type`**: The type of the object being processed (`opik.message_processing.messages.CreateSpanMessage`, `opik.message_processing.messages.CreateTraceMessage`, `opik.message_processing.messages.UpdateTraceMessage`, `opik.message_processing.messages.UpdateSpanMessage`, `opik.message_processing.messages.CreateSpansBatchMessage`, or `opik.message_processing.messages.CreateTracesBatchMessage`)
+- **`object_type`**: The type of the object being processed (`"span"`, `"trace"`)
 
 **When are kwargs available?**
 
