--- a/apps/opik-documentation/documentation/fern/docs/production/alerts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/production/alerts.mdx
@@ -284,7 +284,7 @@ async def get_dashboard():
 
 ## Supported event types
 
-Opik supports eight types of alert events:
+Opik supports ten types of alert events:
 
 ### Observability events
 
@@ -315,6 +315,22 @@ Opik supports eight types of alert events:
 - **Project scope**: Can be configured to specific projects
 - **Payload**: Array of guardrail result objects
 - **Use case**: Security monitoring, compliance tracking, PII detection
+
+**Cost threshold exceeded**
+- **Event type**: `trace:cost`
+- **Triggered when**: Total trace cost exceeds the specified threshold within a time window
+- **Project scope**: Can be configured to specific projects
+- **Configuration**: Requires threshold value (in currency units) and time window (in seconds)
+- **Payload**: Metrics alert payload with cost details
+- **Use case**: Budget monitoring, cost control, prevent runaway spending
+
+**Latency threshold exceeded**
+- **Event type**: `trace:latency`
+- **Triggered when**: Average trace latency exceeds the specified threshold within a time window
+- **Project scope**: Can be configured to specific projects
+- **Configuration**: Requires threshold value (in seconds) and time window (in seconds)
+- **Payload**: Metrics alert payload with latency details
+- **Use case**: Performance monitoring, SLA compliance, user experience tracking
 
 ### Prompt engineering events
 
@@ -592,6 +608,36 @@ All webhook events follow a consistent payload structure:
       ]
     }
   ]
+}
+```
+
+### Cost threshold exceeded payload
+
+```json
+{
+  "metadata": {
+    "event_type": "TRACE_COST",
+    "metric_name": "trace:cost",
+    "metric_value": "150.75",
+    "threshold": "100.00",
+    "window_seconds": "3600",
+    "project_ids": "0198ec68-6e06-7253-a20b-d35c9252b9ba,0198ec68-6e06-7253-a20b-d35c9252b9bb"
+  }
+}
+```
+
+### Latency threshold exceeded payload
+
+```json
+{
+  "metadata": {
+    "event_type": "TRACE_LATENCY",
+    "metric_name": "trace:latency",
+    "metric_value": "5250.5000",
+    "threshold": "5",
+    "window_seconds": "1800",
+    "project_ids": "0198ec68-6e06-7253-a20b-d35c9252b9ba,0198ec68-6e06-7253-a20b-d35c9252b9bb"
+  }
 }
 ```
 
