Revision 9: Add documentation for updating experiment name and configuration

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/concepts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/concepts.mdx
@@ -49,6 +49,10 @@ Experiments are the core building block of the Opik evaluation platform. Each ti
 
 In addition, for each experiment you will be able to see the average scores for each metric.
 
+<Tip>
+  You can update an experiment's name and configuration at any time from the Opik UI or through the SDKs. Learn more in the [Update Existing Experiment](/evaluation/update_existing_experiment) guide.
+</Tip>
+
 ### Experiment Configuration
 
 One of the main advantages of having an automated evaluation platform is the ability to iterate quickly. The main drawback is that it can become difficult to track what has changed between two different iterations of an experiment.
