Revision 10: Add UI screenshots to update experiment documentation

--- a/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/evaluation/update_existing_experiment.mdx
@@ -19,8 +19,17 @@ To update an experiment from the UI:
 2. Find the experiment you want to update
 3. Click the **...** menu button on the experiment row
 4. Select **Edit** from the dropdown menu
+
+<Frame>
+  <img src="/img/evaluation/edit_experiment.png" />
+</Frame>
+
 5. Update the experiment name and/or configuration (JSON format)
 6. Click **Update Experiment** to save your changes
+
+<Frame>
+  <img src="/img/evaluation/edit_experiment_dialog.png" />
+</Frame>
 
 The configuration is stored as JSON and is useful for tracking parameters like model names, temperatures, prompt templates, or any other metadata relevant to your experiment.
 
